OC  = OpenCart (alle ondersteunde versies)
OC1 = OpenCart 1
OC2 = OpenCart 2 (OC21, OC22, OC23 = specifieke minor versie binnen major versie 2)
OC3 = OpenCart 3
PS  = PrestaShop
VM3 = VirtueMart3 (Joomla)
WC  = WooCommerce (WordPress) (alle ondersteunde versies)
WC2 = WooCommerce 2 (WordPress)
WC3 = WooCommerce 3 (WordPress)

5.0.? (201?-??-??)
------------------
- MA2: MA2 is now on the 5.x structure.
- MA2: Tested and corrected event triggering and its parameter passing.
- MA2: Created an example module to handle events defined by the Acumulus module.
- ALL: Verduidelijking v/d vraag "Verkoopt u btw-vrije producten".
- Changes to readme.md and leesmij.md

5.0.0 (2017-12-26)
------------------
- ALL: Merged all 4.x changes up to 4.9.6 into this branch.
- ALL: Added changelog.txt (this file) to the root of this library.
- ALL: Own autoloader is no longer part of the library but will be copied to
  those shops that still need it.
- PS: PS is now on the 5.x structure
- PS: Created an example module to handle hooks defined by the Acumulus module.
- PS: Tested and corrected hook triggering.

5.0.0-alpha1 (2017-09-26)
-------------------------
- ALL: Logberichten op batchscherm ietsje verbeterd.
- MA2: Bij opslaan van het instellingenformulier werd de configuratiecache niet
  goed geleegd.
- MA2 overgezet naar nieuwe library.
- Library op github en packagist geplaatst.
  * Deze is nu apart te downloaden via:
    * https://github.com/SIELOnline/libAcumulus
    * Via composer.json:
      {
        "require": {
          "siel/acumulus": "^5@dev"
        }
      }
  * Voor die webshops/cms die het ondersteunen zal de library voortaan niet
    meer mee geleverd worden, maar via composer apart gedownload moeten worden.
  * De folderstruktuur en naamgeving is aangepast aan de huidige "best
    practices", met name die van php libraries die met composer werken.

4.9.6 (2017-12-22)
------------------
- BTW aangepast naar btw.