@@ -19,6 +19,8 @@ WC3 = WooCommerce 3 (WordPress)
 
 5.0.? (201?-??-??)
 ------------------
+- PS: PS: process fields payment_fee and payment_fee_rate on the invoice source,
+  not on the original order.
 - MA2: MA2 is now on the 5.x structure.
 - MA2: Tested and corrected event triggering and its parameter passing.
 - MA2: Created an example module to handle events defined by the Acumulus module.
